# docs/swagger.json
@@ -2681,6 +2681,122 @@
                 }
             }
         },
+        "/tue/exam-record/list": {
+            "post": {
+                "description": "分页获取用户的考试评分结果",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "考试"
+                ],
+                "summary": "分页获取考试结果",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "end_time",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "分页参数",
+                        "name": "page_num",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "sort_expr",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "start_time",
+                        "in": "query"
+                    },
+                    {
+                        "description": "查询信息",
+                        "name": "search",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/course.GetExamResults.Search"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.CommonResponse-entity_PaginatedTotalResponse-schema_ExamUserRecord"
+                        }
+                    }
+                }
+            }
+        },
+        "/tue/exam-record/{id}": {
+            "get": {
+                "description": "获取用户的考试评分结果",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "考试"
+                ],
+                "summary": "获取考试结果",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "考试记录ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.CommonResponse-schema_ExamUserRecord"
+                        }
+                    }
+                }
+            }
+        },
+        "/tue/exam-record/{id}/rescore": {
+            "post": {
+                "description": "管理员重新评分考试",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "考试"
+                ],
+                "summary": "重新评分考试",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "考试记录ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/tue/exam/create": {
             "post": {
                 "description": "保存单个测验",
@@ -2738,9 +2854,9 @@
                 }
             }
         },
-        "/tue/exam/record/{id}": {
-            "get": {
-                "description": "获取用户的考试评分结果",
+        "/tue/exam/single-problem-record/list": {
+            "post": {
+                "description": "获取单个问题结果列表",
                 "consumes": [
                     "application/json"
                 ],
@@ -2748,51 +2864,53 @@
                     "application/json"
                 ],
                 "tags": [
-                    "考试"
+                    "Exam"
                 ],
-                "summary": "获取考试结果",
+                "summary": "获取单个问题结果列表",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "考试记录ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "name": "end_time",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "分页参数",
+                        "name": "page_num",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "sort_expr",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "start_time",
+                        "in": "query"
+                    },
+                    {
+                        "description": "查询信息",
+                        "name": "search",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/course.GetProblemResults.Search"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.CommonResponse-schema_ExamUserRecord"
+                            "$ref": "#/definitions/entity.CommonResponse-entity_PaginatedTotalResponse-schema_ProblemUserRecord"
                         }
                     }
                 }
-            }
-        },
-        "/tue/exam/record/{id}/rescore": {
-            "post": {
-                "description": "管理员重新评分考试",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "考试"
-                ],
-                "summary": "重新评分考试",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "考试记录ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
             }
         },
         "/tue/exam/single-problem/submit": {
@@ -2861,9 +2979,9 @@
                 }
             }
         },
-        "/tue/exam/{id}/records": {
+        "/tue/exam/{id}/my-records": {
             "get": {
-                "description": "分页获取用户的考试评分结果",
+                "description": "分页获取用户的考试评分结果（单个考试）",
                 "consumes": [
                     "application/json"
                 ],
@@ -2873,16 +2991,40 @@
                 "tags": [
                     "考试"
                 ],
-                "summary": "分页获取考试结果",
+                "summary": "分页获取考试结果（单个考试）",
                 "parameters": [
                     {
-                        "description": "分页信息",
-                        "name": "req",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.ParamPagingSort"
-                        }
+                        "type": "string",
+                        "description": "考试 ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "name": "end_time",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "分页参数",
+                        "name": "page_num",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "sort_expr",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "start_time",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -3420,6 +3562,30 @@
                 }
             }
         },
+        "course.ExamRecordSearch": {
+            "type": "object",
+            "properties": {
+                "everything": {
+                    "type": "string"
+                }
+            }
+        },
+        "course.GetExamResults.Search": {
+            "type": "object",
+            "properties": {
+                "search_data": {
+                    "$ref": "#/definitions/course.ExamRecordSearch"
+                }
+            }
+        },
+        "course.GetProblemResults.Search": {
+            "type": "object",
+            "properties": {
+                "search_data": {
+                    "$ref": "#/definitions/course.ProblemRecordSearch"
+                }
+            }
+        },
         "course.MakeQuestionRequest": {
             "type": "object",
             "required": [
@@ -3432,6 +3598,14 @@
                 },
                 "type": {
                     "$ref": "#/definitions/schema.ProblemType"
+                }
+            }
+        },
+        "course.ProblemRecordSearch": {
+            "type": "object",
+            "properties": {
+                "everything": {
+                    "type": "string"
                 }
             }
         },
@@ -3838,6 +4012,27 @@
                     "allOf": [
                         {
                             "$ref": "#/definitions/entity.PaginatedTotalResponse-schema_Problem"
+                        }
+                    ]
+                },
+                "msg": {
+                    "description": "消息",
+                    "type": "string"
+                }
+            }
+        },
+        "entity.CommonResponse-entity_PaginatedTotalResponse-schema_ProblemUserRecord": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "代码",
+                    "type": "integer"
+                },
+                "data": {
+                    "description": "数据",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/entity.PaginatedTotalResponse-schema_ProblemUserRecord"
                         }
                     ]
                 },
@@ -4467,6 +4662,20 @@
                 }
             }
         },
+        "entity.PaginatedTotalResponse-schema_ProblemUserRecord": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.ProblemUserRecord"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "entity.PaginatedTotalResponse-schema_Provider": {
             "type": "object",
             "properties": {
@@ -4519,27 +4728,6 @@
                     }
                 },
                 "total": {
-                    "type": "integer"
-                }
-            }
-        },
-        "entity.ParamPagingSort": {
-            "type": "object",
-            "properties": {
-                "end_time": {
-                    "type": "integer"
-                },
-                "page_num": {
-                    "description": "分页参数",
-                    "type": "integer"
-                },
-                "page_size": {
-                    "type": "integer"
-                },
-                "sort_expr": {
-                    "type": "string"
-                },
-                "start_time": {
                     "type": "integer"
                 }
             }
@@ -5307,6 +5495,40 @@
                 "ShortAnswer",
                 "TrueFalse"
             ]
+        },
+        "schema.ProblemUserRecord": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "$ref": "#/definitions/schema.ProblemAnswer"
+                },
+                "comment": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "problem": {
+                    "description": "组装",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/schema.Problem"
+                        }
+                    ]
+                },
+                "problem_id": {
+                    "type": "integer"
+                },
+                "score": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
         },
         "schema.Provider": {
             "type": "object",
